--- a/multimedia.html
+++ b/multimedia.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <audio controls>
-          <source src=""
+          <source src="GURU RANDHAWA-PAN INDIA MV.mp3">
     </audio>
+
+ <video controls>
+    <source src="pan india video.mp4">
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oLTe_ZXIEdE?si=sxxsrwZ1JmcjoIRV" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+ 
 </body>
 </html>
