--- a/table.html
+++ b/table.html
@@ -7,25 +7,25 @@
 </head>
 <body>
     <table border="2" cellspacing="2" cell padding="7">
-        <tr>
+        <tr align="centre">
             <th>S.no</th>
             <th>Name</th>
             <th>Mob</th>
             <th>Branch</th>
         </tr>
-        <tr>
+        <tr align="centre">
             <td>1</td>
             <td>Nishi pal </td>
             <td>5678904324</td>
             <td>Cse ds </td>
         </tr>
-        <tr>
+        <tr align="centre">
              <td>2</td>
              <td>Lucky Sharma</td>
              <td>1234567893</td>
              <td>Cse ds</td>
         </tr>
-        <tr>
+        <tr align="centre">
             <td>3</td>
             <td>Nishu Negi</td>
             <td>4523987601</td>
