--- a/EXPERIMENT 3.html
+++ b/EXPERIMENT 3.html
@@ -1,62 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><h1 style="text-align: right";>Global Daily News</h1></head>
-<p style="text-align:right";> Your Trusted source for Latest Updates </p>
-<hr color="black" size="1" width="100%">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Experiment 3</title>
+</head>
 <body>
-    <p style="text-align:right";>
-        <a href="https://www.bbc.com/news/world">World</a> |
-        <a href="https://www.bbc.com/sport">Sport</a> |
-        <a href="https://www.bbc.com/culture/entertainment-news">Entertainment</a> |
-        <a href="https://www.bbc.co.uk/sounds/podcasts">Podcast</a> |
-        <a href="https://www.bbc.co.uk/contact/">Contact</a></p> |
-        <hr color="black" size="1" width="100%">
+    <fieldset style="border:solid;">
+        <table  border ="1" cellspacing="0" cellpadding="0" align="centre" width="100%">
+            <caption>College Timetable - CSE Department</caption>
+         
+<tr>
+    <th > Day/Time</th>
+    <th > 9:00-10:00 AM </th>   
+    <th> 10:00-11:00 AM </th>
+    <th> 11:00-12:00 PM </th>
+    <th> 12:00-1:00 PM </th>
+    <th> 1:00-2:00 PM </th>
+    <th> 2:00-3:00 PM </th>
+    <th> 3:00-4:00 PM </th>
+</tr>
 
-    <p>World News</p>
+<tr>
+    <td> Monday </td>
+    <td rowspan="2"> Mathematics  </td>   
+    <td> English</td> 
+    <td rowspan="3"> Physics</td>
+    <td> Break </td>
+    <td colspan="2"> Computer lab </td>
+    <td> Sports</td>
+</tr>
 
-    <p> Today's top headline: Global leaders meet to discuss climate change initiatives.</p>
+
+<tr>
+    <td> Tuesday </td>
+    <td> C Programming</td>
+    <td> Break </td>
+    <td colspan="2"> Electronics lab </td>
+<td>Library</td>
+</tr>
 
 
-    <img src="https://m.media-amazon.com/images/M/MV5BNGYwNDlmZDgtMDg1Yi00N2JmLTk0NzQtNWVkN2NiMTQxY2RlXkEyXkFqcGc@._V1_.jpg" width="650" height="400">
+<tr>
+<td> Wednesday</td>
+<td> Mathematics</td>
+<td> English</td>
+<td> Break </td>    
+<td> Computer Networks</td>
+<td colspan="2"> <table border="1" width="100%">
 
+    
+        <td colspan="2"><h6 style= text-align:center> Lab details</h6></td>
+    <tr><td> Batch A</td>
+        <td> DBMS Lab</td>
+        </tr>
 
-    <p>
-        <a href="https://www.bbc.com/news">Read more on BBC</a>
-    </p>
+        <tr>
+        <td>Batch B</td>
+        <td>OS Lab</td>
+        </tr>
+         </table>
+         </td>
+        </tr>
 
-    <h1>Sports Update</h1>
+        <tr>
+            <td>Thursday</td>
+            <td colspan="2"> Workshop</td>
+        <td> Physics</td>
+<td> Break</td>
+<td> Mathematics</td>
+<td> English</td>
+<td> Seminar</td></tr>
 
-    <p>Highlights of yesterday's football match with thrilling last-minute goals!</p>
-    <p>
-    <iframe width="650" height="400"
+<tr> 
+    <td> Friday</td>
+    <td>Computer Networks</td>
+    <td> English </td>
+    <td> Physics </td>
+    <td> Break</td>
+    <td colspan="3">Project Work</td>
+</tr>
 
-    src="https://www.youtube.com/embed/aqz-KE-bpKQ?si=AXHn9XA4kbmNaFEh"
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-    picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </p>
-
-    <hr color="black" size="1" width="100%">
-
-    <h1>Entertainment Buzz</h1>
-    <p> New movie trailer released today. Fans are excited!</p>
-    <video width="650" height="400" controls>
-    <source src="type="video/mp4"></video>
-
-    <hr color="black" size="1" width="100%">
-    <h1>News Podcast</h1>
-
-    <p> Listen to today's top headlines: </p>
-
-    <audio controls>
-
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">"
-    </audio>
-
-    <hr color="black" size="1" width="100%">
-
-    <h1>Contact Us</h1>
-    <p>Email: info@globalnews.com</p>
-    © 2025 Global Daily News
-</body>
-
+</table>
+</head>
 </html>
