--- a/HTML/multimedia.html
+++ b/HTML/multimedia.html
@@ -7,16 +7,18 @@
 
 </head>
 <body>
-    <audio controls>
+    <!-- <audio controls>
           <source src="GURU RANDHAWA-PAN INDIA MV.mp3">
-    </audio>
+    </audio> -->
 
- <video controls>
-    <source src="pan india video.mp4">
+ <!-- <video controls>
+    <source src="pan india video.mp4"> -->
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oLTe_ZXIEdE?si=sxxsrwZ1JmcjoIRV" 
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/oLTe_ZXIEdE?si=sxxsrwZ1JmcjoIRV" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" -->
  
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oLTe_ZXIEdE?si=yXADZq23KQHGG1n3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+     gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls>pan india</iframe>
 </body>
 </html>
